[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 288 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15.5 )

[node name="EnemySpawner" type="KinematicBody2D"]
position = Vector2( -20, 0 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 288 )
shape = SubResource( 1 )
disabled = true

[node name="Tile1" type="Area2D" parent="."]
position = Vector2( 0, 16 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile1"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="Tile2" type="Area2D" parent="."]
position = Vector2( 0, 48 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile2"]
shape = SubResource( 2 )

[node name="Tile3" type="Area2D" parent="."]
position = Vector2( 0, 80 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile3"]
shape = SubResource( 2 )

[node name="Tile4" type="Area2D" parent="."]
position = Vector2( 0, 112 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile4"]
shape = SubResource( 2 )

[node name="Tile5" type="Area2D" parent="."]
position = Vector2( 0, 144 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile5"]
shape = SubResource( 2 )

[node name="Tile6" type="Area2D" parent="."]
position = Vector2( 0, 176 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile6"]
shape = SubResource( 2 )

[node name="Tile7" type="Area2D" parent="."]
position = Vector2( 0, 208 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile7"]
shape = SubResource( 2 )

[node name="Tile8" type="Area2D" parent="."]
position = Vector2( 0, 240 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile8"]
shape = SubResource( 2 )

[node name="Tile9" type="Area2D" parent="."]
position = Vector2( 0, 272 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile9"]
shape = SubResource( 2 )

[node name="Tile10" type="Area2D" parent="."]
position = Vector2( 0, 304 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile10"]
shape = SubResource( 2 )

[node name="Tile11" type="Area2D" parent="."]
position = Vector2( 0, 336 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile11"]
shape = SubResource( 2 )

[node name="Tile12" type="Area2D" parent="."]
position = Vector2( 0, 368 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile12"]
shape = SubResource( 2 )

[node name="Tile13" type="Area2D" parent="."]
position = Vector2( 0, 400 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile13"]
shape = SubResource( 2 )

[node name="Tile14" type="Area2D" parent="."]
position = Vector2( 0, 432 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile14"]
shape = SubResource( 2 )

[node name="Tile15" type="Area2D" parent="."]
position = Vector2( 0, 464 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile15"]
shape = SubResource( 2 )

[node name="Tile16" type="Area2D" parent="."]
position = Vector2( 0, 496 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile16"]
shape = SubResource( 2 )

[node name="Tile17" type="Area2D" parent="."]
position = Vector2( 0, 528 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile17"]
shape = SubResource( 2 )

[node name="Tile18" type="Area2D" parent="."]
position = Vector2( 0, 560 )
collision_layer = 32
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Tile18"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Tile1" to="." method="_on_Tile1_body_entered"]
[connection signal="body_entered" from="Tile2" to="." method="_on_Tile2_body_entered"]
[connection signal="body_entered" from="Tile3" to="." method="_on_Tile3_body_entered"]
[connection signal="body_entered" from="Tile4" to="." method="_on_Tile4_body_entered"]
[connection signal="body_entered" from="Tile5" to="." method="_on_Tile5_body_entered"]
[connection signal="body_entered" from="Tile6" to="." method="_on_Tile6_body_entered"]
[connection signal="body_entered" from="Tile7" to="." method="_on_Tile7_body_entered"]
[connection signal="body_entered" from="Tile8" to="." method="_on_Tile8_body_entered"]
[connection signal="body_entered" from="Tile9" to="." method="_on_Tile9_body_entered"]
[connection signal="body_entered" from="Tile10" to="." method="_on_Tile10_body_entered"]
[connection signal="body_entered" from="Tile11" to="." method="_on_Tile11_body_entered"]
[connection signal="body_entered" from="Tile12" to="." method="_on_Tile12_body_entered"]
[connection signal="body_entered" from="Tile13" to="." method="_on_Tile13_body_entered"]
[connection signal="body_entered" from="Tile14" to="." method="_on_Tile14_body_entered"]
[connection signal="body_entered" from="Tile15" to="." method="_on_Tile15_body_entered"]
[connection signal="body_entered" from="Tile16" to="." method="_on_Tile16_body_entered"]
[connection signal="body_entered" from="Tile17" to="." method="_on_Tile17_body_entered"]
[connection signal="body_entered" from="Tile18" to="." method="_on_Tile18_body_entered"]
